--- a/catch-of-the-day/src/css/style.css
+++ b/catch-of-the-day/src/css/style.css
@@ -1,34 +1,36 @@
 .order-enter {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   -webkit-transform: translateX(-120%);
           transform: translateX(-120%);
   max-height: 0;
   padding: 0 !important;
 }
 .order-enter.order-enter-active {
+  max-height: 60px;
+  padding: 2em 0 !important;
   -webkit-transform: translateX(0);
           transform: translateX(0);
-  max-height: 60px;
-  padding: 2rem 0 !important;
 }
 .order-leave {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   -webkit-transform: translateX(0);
           transform: translateX(0);
+  max-height: 60px;
+  padding: 2em 0 !important;
 }
 .order-leave.order-leave-active {
   max-height: 0;
-  padding: 0;
+  padding: 0 !important;
   -webkit-transform: translateX(120%);
           transform: translateX(120%);
 }
 .count-enter {
   -webkit-transition: all 0.25s;
   transition: all 0.25s;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
 }
 .count-enter.count-enter-active {
   -webkit-transform: translateY(0);
@@ -44,8 +46,8 @@
           transform: translateY(0);
 }
 .count-leave.count-leave-active {
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
 }
 @font-face {
   font-family: "haymakerregular";
