To end of video 25

--- a/catch-of-the-day/src/css/style.css
+++ b/catch-of-the-day/src/css/style.css
@@ -595,8 +595,8 @@ input[type=submit].success:after {
 }
 button.github,
 input[type=submit].github,
-button.facebook,
-input[type=submit].facebook,
+button.google,
+input[type=submit].google,
 button.twitter,
 input[type=submit].twitter {
   border: 0;
@@ -614,13 +614,13 @@ button.github:after,
 input[type=submit].github:after {
   background: #5cc437;
 }
-button.facebook,
-input[type=submit].facebook {
-  background: #3864a3;
+button.google,
+input[type=submit].google {
+  background: #ea4335;
 }
-button.facebook:after,
-input[type=submit].facebook:after {
-  background: #2d5082;
+button.google:after,
+input[type=submit].google:after {
+  background: #d02416;
 }
 button.twitter,
 input[type=submit].twitter {
