--- a/catch-of-the-day/src/css/style.styl
+++ b/catch-of-the-day/src/css/style.styl
@@ -256,7 +256,7 @@ button, input[type=submit]
     &:after
       background green
 
-  &.github, &.facebook, &.twitter
+  &.github, &.google, &.twitter
     border 0
     display block
     margin-bottom 2rem
@@ -269,10 +269,10 @@ button, input[type=submit]
     &:after
       background darken(#82D465, 20%)
 
-  &.facebook
-    background #3864A3
+  &.google
+    background #EA4335
     &:after
-      background darken(#3864A3, 20%)
+      background darken(#EA4335, 20%)
 
   &.twitter
     background #5EA9DD
